fixed cookie clicker on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -430,6 +430,8 @@ a {
         display: none;
     }
 }
+
+
 @media (min-width: 750px){
     .circle-button {
         position: absolute;
@@ -480,30 +482,25 @@ a {
     }
     
     .cookie-clicker {
-        width: 90vw;
-        height: 25vw;
+        width: 90vw!important;
         background-color: transparent !important;
         border-color: white !important;
         border-width: 4px !important;
         color: white !important;
-        margin: 4rem;
         justify-content: space-around;
         align-items: center;
-        border-radius: 35% !important;
-        padding-top: 5vh;
         padding-bottom: 5vh;
-        padding-left: 1vw;
-        padding-right: 1vw;
+        height: 33vh;
+        margin-bottom: 10vh;
     }
     
     .cookie-clicker-image {
         position: absolute;
-        top: -5rem;
-        left: -5rem;
+        top: 8rem;
+        left: -2rem;
         width: 100%;
         height: auto;
-        max-width: 15vw;
-        max-height: auto;
+        max-width: 30vw;
     }
 
 }
